examples/test/testpolicy2515.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2515
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key18: value41
      key36: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value1
          key9: value3
      podSelector:
        matchLabels:
          key15: value38
          key21: value4
          key4: value8
